--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_baseline_calculate_24"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyCalculator">
+        android:theme="@style/Theme.MyCalculatorAlternative">
         <activity android:name=".MainActivity"
             android:configChanges="orientation|screenSize">
             <intent-filter>
